Add: show all photos methods